refactor: partir shell, pages y servicios Java residuales
Extrae god-files restantes a colaboradores, reemplaza catch vacios por log y regenera el bundle estatico.

Co-authored-by: Cursor <cursoragent@cursor.com>